fixes for array lib

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -2,7 +2,7 @@ IDIR = ../include
 SDIR = ../src
 ODIR = ./obj
 CXX = g++
-LDFLAGS = -lgtest_main -lgtest -lpthread
+LDFLAGS =  -lpthread #-lgtest_main -lgtest
 CPPFLAGS = -Wall -g -pthread -std=c++11
 
 _DEPS = scheduler.h worker.h deque.h task.h utils.h
@@ -11,7 +11,8 @@ DEPS = $(patsubst %, $(IDIR)/%, $(_DEPS))
 _OBJ = scheduler.o worker.o deque.o task.o
 OBJ = $(patsubst %, $(ODIR)/%, $(_OBJ))
 
-APPS = fibonacci.cpp
+APPS = parallelArray.cpp
+BENCHMARK = benchmark.cpp
 
 all: fibonacci
 
@@ -22,8 +23,12 @@ $(ODIR)/%.o: $(SDIR)/%.cpp $(DEPS)
 fibonacci: $(OBJ) $(APPS)
 	$(CXX) $(CPPFLAGS) -o $@ $^ $(LDFLAGS) -I$(IDIR)
 
+benchmark: $(OBJ) $(APPS) $(BENCHMARK)
+	$(CXX) $(CPPFLAGS) -o $@ $^ $(LDFLAGS) -I$(IDIR)
+
 .PHONY: clean
 
 clean:
 	rm -rf $(ODIR)
 	rm -f fibonacci
+	rm -f benchmark
